--- a/Productgr.html
+++ b/Productgr.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/Product page kilim (1).png" class="w-100 img  mb-2" alt="carpet 1">
+                        <img src="./images/Product page kilim (1).png" class=" img  mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold " id="custom">Heritage Wolle Handgefertigter Kelim
                         </p>
                         <div class="size d-flex">
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2  rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/Product page kilim (2).png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/Product page kilim (2).png" class=" img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">Balochy Wool Handmade Kilim
                         </p>
                         <div class="size d-flex">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/cart 3.png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/cart 3.png" class=" img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">Hersyen Wool Handmade Kilim
                         </p>
                         <div class="size d-flex">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/cart 4.png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/cart 4.png" class=" img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">Qashqai Wool Handmade Kilim
                         </p>
                         <div class="size d-flex">
