--- a/productAr.html
+++ b/productAr.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/Product page kilim (1).png" class="w-100 img  mb-2" alt="carpet 1">
+                        <img src="./images/Product page kilim (1).png" class="img  mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">كليم تراثس صوف يدوي </p>
                         <div class="size d-flex">
                         <span class="me-2 fs-6 fw-normal">المقاس:</span>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2  rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/Product page kilim (2).png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/Product page kilim (2).png" class="img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">كليم بلوش صوف يدوي
                         </p>
                         <div class="size d-flex">
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/cart 3.png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/cart 3.png" class=" img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">كليم هرسين صوف يدوي</p>
                         <div class="size d-flex">
                         <span class="me-2 fs-6 fw-normal">المقاس:</span>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-lg-3 mb-md-3">
                     <div class="item p-4 mb-2 rounded-3 align-items-center d-flex flex-column text-start">
-                        <img src="./images/cart 4.png" class="w-100 img mb-2" alt="carpet 1">
+                        <img src="./images/cart 4.png" class=" img mb-2" alt="carpet 1">
                         <p class="mb-2 fs-6 fw-semibold">كليم قشقاي صوف يدوي
                         </p>
                         <div class="size d-flex">
